--- a/SQL/bike_share_analysis_sql.ipynb
+++ b/SQL/bike_share_analysis_sql.ipynb
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, i get the mean and maximum ride length per rider type."
+    "Next, i get the mean and maximum ride length per rider type. The method SEC_TO_TIME converts the average ride_length from seconds to HH:MM:SS, the method DATE_FORMAT then allows us to format the date since the average method returns too many decimals. For the maximum, the value is converted to days since these rides are much too long to be displayed in HH:MM:SS. "
    ]
   },
   {
@@ -310,39 +310,26 @@
     "select  month as 'Month',\n",
     "        DATE_FORMAT(SEC_TO_TIME(AVG(CASE WHEN member_casual = 'casual' THEN ride_length END)), '%H:%i:%s') AS 'Mean_Casual',\n",
     "        DATE_FORMAT(SEC_TO_TIME(AVG(CASE WHEN member_casual = 'member' THEN ride_length END)), '%H:%i:%s') AS 'Mean_Member',\n",
-    "        DATE_FORMAT(SEC_TO_TIME(MAX(CASE WHEN member_casual = 'casual' THEN ride_length END)), '%D %H:%i:%s') AS 'Max_Casual',\n",
-    "        DATE_FORMAT(SEC_TO_TIME(MAX(CASE WHEN member_casual = 'member' THEN ride_length END)), '%D %H:%i:%s') AS 'Max_Member'\n",
+    "        CONCAT(FLOOR(MAX(CASE WHEN member_casual = 'casual' THEN ride_length END) / (24*3600)), ' days') AS 'Max_Casual',\n",
+    "        CONCAT(FLOOR(MAX(CASE WHEN member_casual = 'member' THEN ride_length END) / (24*3600)), ' days') AS 'Max_Member'\n",
     "FROM    all_months_cleaned\n",
     "GROUP BY month\n",
     "\n",
     "union all \n",
     "\n",
     "select  'Year 2023',\n",
-    "        AVG(CASE WHEN member_casual = 'casual' THEN ride_length END) AS 'Mean_Casual',\n",
-    "        AVG(CASE WHEN member_casual = 'member' THEN ride_length END) AS 'Mean_Member',\n",
-    "        MAX(CASE WHEN member_casual = 'casual' THEN ride_length END) AS 'Max_Casual',\n",
-    "        MAX(CASE WHEN member_casual = 'member' THEN ride_length END) AS 'Max_Member'\n",
+    "        DATE_FORMAT(SEC_TO_TIME(AVG(CASE WHEN member_casual = 'casual' THEN ride_length END)), '%H:%i:%s') AS 'Mean_Casual',\n",
+    "        DATE_FORMAT(SEC_TO_TIME(AVG(CASE WHEN member_casual = 'member' THEN ride_length END)), '%H:%i:%s') AS 'Mean_Member',\n",
+    "        CONCAT(FLOOR(MAX(CASE WHEN member_casual = 'casual' THEN ride_length END) / (24*3600)), ' days') AS 'Max_Casual',\n",
+    "        CONCAT(FLOOR(MAX(CASE WHEN member_casual = 'member' THEN ride_length END) / (24*3600)), ' days') AS 'Max_Member'\n",
     "from    all_months_cleaned"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "select  started_at,\n",
-    "        ended_at, \n",
-    "        ended_at-started_at,\n",
-    "        TIMESTAMPDIFF(SECOND, started_at, ended_at) as diff,\n",
-    "        SEC_TO_TIME(TIME_TO_SEC(ended_at)-TIME_TO_SEC(started_at))\n",
-    "from    all_months\n",
-    "where   month='Jan'\n",
-    "LIMIT 5"
+    "Here i find the mean ride length per rider type after grouping the data by day of the week"
    ]
   },
   {
@@ -355,9 +342,36 @@
    },
    "outputs": [],
    "source": [
-    "select  AVG(SEC_TO_TIME(TIME_TO_SEC(ended_at)-TIME_TO_SEC(started_at)))\n",
-    "from    all_months_cleaned\n",
-    "\n"
+    "SELECT      day_of_week,\n",
+    "            DATE_FORMAT(SEC_TO_TIME(AVG(CASE WHEN member_casual = 'casual' THEN ride_length END)), '%H:%i:%s')  AS 'Mean_Casual',\n",
+    "            DATE_FORMAT(SEC_TO_TIME(AVG(CASE WHEN member_casual = 'member' THEN ride_length END)), '%H:%i:%s')  AS 'Mean_Member'\n",
+    "FROM        all_months_cleaned\n",
+    "GROUP BY    day_of_week\n",
+    "ORDER BY    day_of_week"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here i find the number of bike rides per rider type per type of bike"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT      rideable_type,    \n",
+    "            FORMAT(SUM(CASE WHEN member_casual='casual' THEN 1 ELSE 0 END), 0) AS 'Casual',\n",
+    "            FORMAT(SUM(CASE WHEN member_casual='member' THEN 1 ELSE 0 END), 0) AS 'Member'\n",
+    "FROM        all_months_cleaned\n",
+    "GROUP BY    rideable_type"
    ]
   }
  ],
